finally fixed the legend so it wraps properly

--- a/src/frontend-admin/src/components/reusables/PieChart/PieChart.module.css
+++ b/src/frontend-admin/src/components/reusables/PieChart/PieChart.module.css
@@ -1,9 +1,15 @@
 .legendList {
-    padding-left: 2em;
+    padding: 10px;
+    display: flex;
     cursor: pointer;
 }
 .inline {
     display: flex;
+    justify-content: center;
+}
+.inlineLegend {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
